elk_stack/filebeat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebeat
  namespace: sock-shop
  labels:
    app: filebeat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      labels:
        app: filebeat
    spec:
      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:7.10.0
          args: ["-e"]
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: config
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml
            - name: logs
              mountPath: /path/to/your/logs
      volumes:
        - name: config
          configMap:
            name: filebeat-config
        - name: logs
          hostPath:
            path: /path/to/your/logs
            type: DirectoryOrCreate
